# autoengine

./: .gitignore  Cargo.toml  README.md
auto-engine-cli/: Cargo.toml
auto-engine-cli/src/: cmd.rs  main.rs
auto-engine-cli/src/converter/: keymousego.rs  mod.rs  quickinput.rs
auto-engine-cli/src/converter/types/: keymousego.rs  mod.rs  quickinput.rs
auto-engine-core/: Cargo.toml
auto-engine-core/src/: lib.rs  node.rs  pipeline.rs  runner.rs
auto-engine-core/src/event/: mod.rs  node.rs  task.rs
auto-engine-core/src/node/: http.rs
auto-engine-core/src/node/data_aggregator/: node.rs
auto-engine-core/src/node/image_match/: node.rs  runner.rs
auto-engine-core/src/node/keyboard/: node.rs  runner.rs
auto-engine-core/src/node/mouse_click/: node.rs  runner.rs
auto-engine-core/src/node/mouse_move/: node.rs  runner.rs
auto-engine-core/src/node/ocr/: runner.rs
auto-engine-core/src/node/start/: node.rs  runner.rs
auto-engine-core/src/node/time_wait/: node.rs
auto-engine-core/src/node/wasm/: node.rs  runner.rs
auto-engine-core/src/register/: bus.rs
auto-engine-core/src/runner/: keyboard.rs
auto-engine-core/src/schema/: node.rs  workflow.rs
auto-engine-core/src/types/: conditions.rs  field.rs  mod.rs  node.rs
auto-engine-core/src/workflow/: graph.rs  runner.rs
auto-engine-macro/src/: lib.rs
auto-engine-macro/src/node/: define.rs
